--- a/platform/OSP/doc/99100-OSPReleaseNotes.page
+++ b/platform/OSP/doc/99100-OSPReleaseNotes.page
@@ -1,6 +1,19 @@
 OSP Release Notes
 Open Service Platform
 
+!!!Release 2015.2
+
+  - Allow passing arguments to OSP WebFilterExtensionPoint
+
+!!Known Issues
+
+  - None at this time.
+
+!!Incompatible Changes and Possible Transition Issues
+
+  - None at this time.
+
+
 !!!Release 2015.1
 
 !!Summary of Changes
@@ -11,7 +24,7 @@ Open Service Platform
     next request).
   - OSP Auth: When authenticating a user via LDAP fails, the user is removed from the local
     user database, as authentication failure can also mean that the user no longer
-    exists.
+    exists. Furthermore, LDAP attribute names are now case insensitive.
 
 !!Known Issues
 
