--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -5,6 +5,16 @@ AAAIntroduction
 
 !!Summary of Changes
 
+  - POSSIBLE BREAKING CHANGE: removed automatic registration of Data connectors due to
+    issues with static initialization order.
+  - NetSSL_OpenSSL: added support for ECDH and DH ciphers; added support to disable
+    specific protocols (Poco::Net::Context::disableProtocols()); 
+    new Poco::Net::Context constructor taking a Poco::Net::Context::Params structure that 
+    allows specifying ECDH and DH parameters.
+  - Poco::Net::TCPServer: add additional try ... catch block around poll() to 
+    gracefully deal with errors due to high system load (e.g., out of file descriptors).
+  - fixed GH #1171: Poco::Data::RecordSet: rowCount not reset after execute
+  - fixed GH #1167: CMake & POCO_UNBUNDLED: expat sources are compiled in libPocoXML 
   - fixed GH #1160: Poco::Net::NetException 
     "SSL Exception: error:1409F07F:SSL routines:ssl3_write_pending:bad write retry"
   - fixed GH #1152: Wrong TaskProgressNotification description
@@ -54,6 +64,13 @@ AAAIntroduction
   - HTTPSessionInstantiator: respect global proxy config
   - added constant for HTTP PATCH method to Poco::Net::HTTPRequest
   - NumberParser::parseHex[64](): allow 0x/0X prefix
+
+!!Incompatible Changes and Possible Transition Issues
+
+  - Removed automatic registration of Data connectors due to issues with static 
+    initialization order. Data connectors used in an application must be explicitly
+    registered with a call to registerConnector() before it can be used, e.g.: 
+    Poco::Data::SQLite::Connector::registerConnector()
 
 
 !!!Release 1.6.1
