--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -1,6 +1,19 @@
 POCO C++ Libraries Release Notes
 AAAIntroduction
 
+!!!Release 1.7.4
+
+!!Summary of Changes
+
+  - fixed GH #1300: Session constructor hangs
+  - fixed GH #1303: HTTPSClientSession::sendRequest() fails if server has wildcard cert
+  - fixed GH #1304: URI doesn't know "ws:/" or "wss://" schemes
+  - fixed GH #1307: Upgrade bundled expat to 2.2.0
+  - fixed GH #1316: Empty SocketReactor never sleeps
+  - fixed GH #1313: XML library compilation error
+  - Upgraded bundled SQLite to 3.13.0
+
+
 !!!Release 1.7.3
 
 !!Summary of Changes
