--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -1,6 +1,19 @@
 POCO C++ Libraries Release Notes
 AAAIntroduction
 
+!!!Release 1.7.5
+
+!!Summary of Changes
+
+  - fixed GH #1252: Unable to compile Poco::Data for Windows Compact Embedded 2013
+  - fixed GH #1355: [JSON::Object] After copy-ctor, JSON::Object::_keys still points to 
+    keys in map of copied object 
+  - GH #1361: Shell expansion rules say that tilde must be replaced with $HOME before 
+    calling getpwuid
+  - Poco::SingletonHolder: added reset() method
+  - Upgraded bundled SQLite to 3.14.1
+
+
 !!!Release 1.7.4
 
 !!Summary of Changes
